tests/e2e/snapshots/test__e2e__online__moonup_uninstall_keep_cache.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - uninstall
    - 0.1.20241231+ba15a9a4e
    - "--keep-cache"
---
success: true
exit_code: 0
----- stdout -----
✔  Uninstalled toolchain 0.1.20241231+ba15a9a4e

----- stderr -----
