tests/e2e/snapshots/test__e2e__online__moonup_update.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - update
---
success: true
exit_code: 0
----- stdout -----
The latest toolchain is up to date
The nightly toolchain is up to date

----- stderr -----
