tests/e2e/snapshots/test__e2e__online__moonup_which.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - which
    - moon
---
success: true
exit_code: 0
----- stdout -----
[MOONUP_HOME]/toolchains/0.1.20241231+ba15a9a4e/bin/moon

----- stderr -----
